Fix all compilation errors for 1.20.1 (40 errors resolved)
- Remove codec/simpleCodec (1.21.1 only)
- Change protected→public on BlockBehaviour overrides
- loadAdditional→load for BlockEntity
- ServerPlayNetworking.send(player, id, buf) for old Fabric API
- DeltaTracker→float, mouseScrolled 4→3 params
- addVertex→vertex, setColor→color, setOverlay→overlayCoords
- Thread.ofVirtual→new Thread, getFirst→get(0)
- Pattern switches→instanceof, JAVA_21→JAVA_17 mixins
- Gradle 8.8, Loom 1.5 for Java 21 build env
- Build verified: BUILD SUCCESSFUL