@@ -89,7 +89,7 @@ public class OnDemandSeriesScreen extends Screen {
 		if (items.isEmpty()) {
 			return false;
 		}
-		this.series = items.getFirst();
+		this.series = items.get(0);
 		return true;
 	}
 
@@ -201,11 +201,11 @@ public class OnDemandSeriesScreen extends Screen {
 	}
 
 	@Override
-	public boolean mouseScrolled(double mouseX, double mouseY, double horizontalDelta, double verticalDelta) {
-		if (super.mouseScrolled(mouseX, mouseY, horizontalDelta, verticalDelta)) {
+	public boolean mouseScrolled(double mouseX, double mouseY, double delta) {
+		if (super.mouseScrolled(mouseX, mouseY, delta)) {
 			return true;
 		}
-		this.scroll -= verticalDelta * 24.0;
+		this.scroll -= delta * 24.0;
 		this.clampScroll();
 		this.applyVisibility();
 		return true;
